--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
              uses: docker/login-action@v3
              with:
                username: ${{ secrets.DOCKERHUB_USERNAME }}
-               password: ${{ secrets.DOCKER_TOKEN }}
+               password: ${{ secrets.DOCKERHUB_TOKEN }}
             -
              name: Build y push a docker
              uses: docker/build-push-action@v6
