--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,4 +33,4 @@ jobs:
              uses: docker/build-push-action@v6
              with:
                push: true
-               tags: yagoo23/examen-back:latest
+               tags: Yagoo23/examen-back:latest
